[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menus/LevelSelect.gd" type="Script" id=1]

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1004.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 497.0
margin_bottom = 556.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 497.0
margin_bottom = 150.0

[node name="PanelContainer4" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 497.0
margin_bottom = 28.0

[node name="lblCash" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PanelContainer4"]
margin_left = 7.0
margin_top = 7.0
margin_right = 490.0
margin_bottom = 21.0
text = "Cash: 0 $"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 497.0
margin_bottom = 36.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 497.0
margin_bottom = 74.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 490.0
margin_bottom = 27.0
custom_constants/separation = 50

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 17.0
margin_bottom = 20.0
text = "-"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 67.0
margin_top = 3.0
margin_right = 75.0
margin_bottom = 17.0
text = "1"
align = 1

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 125.0
margin_right = 145.0
margin_bottom = 20.0
text = "+"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 195.0
margin_top = 3.0
margin_right = 213.0
margin_bottom = 17.0
text = "HP"

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 497.0
margin_bottom = 112.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 490.0
margin_bottom = 27.0
custom_constants/separation = 50

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
margin_right = 17.0
margin_bottom = 20.0
text = "-"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
margin_left = 67.0
margin_top = 3.0
margin_right = 75.0
margin_bottom = 17.0
text = "1"
align = 1

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
margin_left = 125.0
margin_right = 145.0
margin_bottom = 20.0
text = "+"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
margin_left = 195.0
margin_top = 3.0
margin_right = 251.0
margin_bottom = 17.0
text = "Handling"

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 497.0
margin_bottom = 150.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PanelContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 490.0
margin_bottom = 27.0
custom_constants/separation = 50

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PanelContainer3/HBoxContainer"]
margin_right = 17.0
margin_bottom = 20.0
text = "-"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PanelContainer3/HBoxContainer"]
margin_left = 67.0
margin_top = 3.0
margin_right = 75.0
margin_bottom = 17.0
text = "1"
align = 1

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PanelContainer3/HBoxContainer"]
margin_left = 125.0
margin_right = 145.0
margin_bottom = 20.0
text = "+"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PanelContainer3/HBoxContainer"]
margin_left = 195.0
margin_top = 3.0
margin_right = 264.0
margin_bottom = 17.0
text = "Rate of fire"

[node name="levelsGrid" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 507.0
margin_right = 1004.0
margin_bottom = 556.0
size_flags_horizontal = 3
custom_constants/vseparation = 50
custom_constants/hseparation = 50
columns = 3

[node name="Lvl1" type="Button" parent="VBoxContainer/HBoxContainer/levelsGrid"]
margin_right = 132.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "1"

[node name="Lvl2" type="Button" parent="VBoxContainer/HBoxContainer/levelsGrid"]
margin_left = 182.0
margin_right = 314.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "2"

[node name="Lvl3" type="Button" parent="VBoxContainer/HBoxContainer/levelsGrid"]
margin_left = 364.0
margin_right = 496.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "3"

[node name="Lvl4" type="Button" parent="VBoxContainer/HBoxContainer/levelsGrid"]
margin_top = 202.0
margin_right = 132.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "4"

[node name="Lvl5" type="Button" parent="VBoxContainer/HBoxContainer/levelsGrid"]
margin_left = 182.0
margin_top = 202.0
margin_right = 314.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "5"

[node name="Lvl6" type="Button" parent="VBoxContainer/HBoxContainer/levelsGrid"]
margin_left = 364.0
margin_top = 202.0
margin_right = 496.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "6"

[node name="Lvl7" type="Button" parent="VBoxContainer/HBoxContainer/levelsGrid"]
margin_top = 404.0
margin_right = 132.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "7"

[node name="Lvl8" type="Button" parent="VBoxContainer/HBoxContainer/levelsGrid"]
margin_left = 182.0
margin_top = 404.0
margin_right = 314.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "8"

[node name="Lvl9" type="Button" parent="VBoxContainer/HBoxContainer/levelsGrid"]
margin_left = 364.0
margin_top = 404.0
margin_right = 496.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "9"

[node name="HBoxContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 560.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="btnLaunch" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 473.0
margin_right = 530.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Launch"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/levelsGrid/Lvl1" to="." method="_on_LvlSelected_pressed" binds= [ 1 ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/levelsGrid/Lvl2" to="." method="_on_LvlSelected_pressed" binds= [ 2 ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/levelsGrid/Lvl3" to="." method="_on_LvlSelected_pressed" binds= [ 3 ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/levelsGrid/Lvl4" to="." method="_on_LvlSelected_pressed" binds= [ 4 ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/levelsGrid/Lvl5" to="." method="_on_LvlSelected_pressed" binds= [ 5 ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/levelsGrid/Lvl6" to="." method="_on_LvlSelected_pressed" binds= [ 6 ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/levelsGrid/Lvl7" to="." method="_on_LvlSelected_pressed" binds= [ 7 ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/levelsGrid/Lvl8" to="." method="_on_LvlSelected_pressed" binds= [ 8 ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/levelsGrid/Lvl9" to="." method="_on_LvlSelected_pressed" binds= [ 9 ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/btnLaunch" to="." method="_on_btnLaunch_pressed"]
